Fix header overlap on toast messages

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -18,7 +18,7 @@ body {
     color: #f8f9fa;
     font-family: 'Lora', serif;
     margin-top: 80px;
-    padding-top: 50px
+    padding-top: 80px
 }
 
 .main-content {
@@ -93,6 +93,10 @@ html {
 
 .navbar-nav {
     margin-left: -20px;
+}
+
+#msg {
+    margin-top: 100px;
 }
 
 /* Buttons */
@@ -209,7 +213,7 @@ a:hover {
 
 /* Miscellaneous */
 .container {
-    margin-top: 50px;
+    margin-top: 100px;
     padding: 20px;
 }
 
@@ -519,7 +523,7 @@ div#map {min-height: 360px;}
 /* For screens smaller than 576px (Phones) */
 @media (max-width: 576px) {
     body {
-    padding-top: 50px;
+    padding-top: 100px;
     }
 
     h1,
